--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-    "version":2,
     "builds":[
         {
-            "src":"ekrisshakbackend/wsgi.py","use":"@vercel/python"
+            "src":"ekrisshakbackend/wsgi.py",
+            "use":"@vercel/python",
+            "config":{"maxLambdaSize":"15mb","runtime":"python3.9"}
         }
     ],
     "routes":[
         {
-            "src":"/(.*)","dest":"ekrisshakbackend/wsgi.py"
+            "src":"/(.*)",
+            "dest":"ekrisshakbackend/wsgi.py"
         }
     ]
 }
